Code review remarks